generated/checkers/refine/KN-Uninit-Data-3948abaa-1/build_logs/syntax-repair-refine-0-4/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::isCopyLenDefinitelyZero(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:271:3: error: ‘Optional’ was not declared in this scope; did you mean ‘clang::ObjCImplementationControl::Optional’?
  271 |   Optional<DefinedOrUnknownSVal> DLen = LenV.getAs<DefinedOrUnknownSVal>();
      |   ^~~~~~~~
      |   clang::ObjCImplementationControl::Optional
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/ExprObjC.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/CFG.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/AnalysisDeclContext.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/PathDiagnostic.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/DeclObjC.h:118:56: note: ‘clang::ObjCImplementationControl::Optional’ declared here
  118 | enum class ObjCImplementationControl { None, Required, Optional };
      |                                                        ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:271:32: error: expected primary-expression before ‘>’ token
  271 |   Optional<DefinedOrUnknownSVal> DLen = LenV.getAs<DefinedOrUnknownSVal>();
      |                                ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:271:34: error: ‘DLen’ was not declared in this scope
  271 |   Optional<DefinedOrUnknownSVal> DLen = LenV.getAs<DefinedOrUnknownSVal>();
      |                                  ^~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:272:32: error: expected primary-expression before ‘>’ token
  272 |   Optional<DefinedOrUnknownSVal> DZero = ZeroV.getAs<DefinedOrUnknownSVal>();
      |                                ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:272:34: error: ‘DZero’ was not declared in this scope
  272 |   Optional<DefinedOrUnknownSVal> DZero = ZeroV.getAs<DefinedOrUnknownSVal>();
      |                                  ^~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
